# IIS

./: .gitignore  pyproject.toml
data/processed/: api_processed.csv  mbajk_processed.csv
data/raw/: api_dataset.json
src/data/: fetch_data.py  processed_data_api.py  processed_data_csv.py
