[tool.poetry]
name = "iis1"
version = "0.1.0"
description = ""
authors = ["Haris Brulic <haris.brulic@student.um.si>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
flask = "^3.0.2"
pytest = "^8.1.1"
poethepoet = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
